--- a/talents/pom.xml
+++ b/talents/pom.xml
@@ -36,6 +36,10 @@
             <artifactId>swagger-annotations</artifactId>
             <version>1.5.22</version>
         </dependency>
+        <dependency>
+            <groupId>com.ruoyi</groupId>
+            <artifactId>ruoyi-framework</artifactId>
+        </dependency>
     </dependencies>
 
 
